update and implementation of mvn flow